--- a/src/templates/components/composition.pug
+++ b/src/templates/components/composition.pug
@@ -15,21 +15,21 @@ section.composition.block.bg
         li.composition__item
           picture
             source(srcset="img/composition__01.webp", type="image/webp")
-            img.composition__img(src="img/composition__01.png", alt="")
+            img.composition__img(src="img/composition__01.png", alt="" loading="lazy")
           .composition__text_wrapper
             h3.composition__header Протеины крови марала и&nbsp;бобрового мускуса
             p.composition__text способствует уменьшению грыжи восстанавливая стенки брюшной полости и повышая эластичность
         li.composition__item
           picture
             source(srcset="img/composition__02.webp", type="image/webp")
-            img.composition__img(src="img/composition__02.png", alt="")
+            img.composition__img(src="img/composition__02.png", alt="" loading="lazy")
           .composition__text_wrapper
             h3.composition__header Экстракт леспедецы и&nbsp;прополиса
             p.composition__text устраняет боль и предотвращает отмирание органов нормализуя внутрибрюшное давление
         li.composition__item
           picture
             source(srcset="img/composition__03.webp", type="image/webp")
-            img.composition__img(src="img/composition__03.png", alt="")
+            img.composition__img(src="img/composition__03.png", alt="" loading="lazy")
           .composition__text_wrapper
             h3.composition__header Концентрат кровохлебки и&nbsp;любистка
             p.composition__text избавляет от риска ущемления грыжи улучшая кровообращение и эластичность стенок ущемленных органов
