--- a/src/templates/components/doctor.pug
+++ b/src/templates/components/doctor.pug
@@ -13,7 +13,7 @@ section.doctor.block.bg
         p.doctor__text Из всех растительных формул мне больше всего нравится состав Трауфрила - он самый эффективный, и это подтвердили результаты клиники, в которой я работаю. 
           span.bold.text__black Этот препарат помогает свести грыжу на нет без вреда для пациента.
           | Я рекомендую его всем, кто приходит ко мне с грыжей и хочет избежать операции. И взрослым, и детям.
-        img.doctor__sign(src="img/sign.png", alt="Sign")
+        img.doctor__sign(src="img/sign.png", alt="Sign" loading="lazy")
       .doctor__wrapper_doc
           picture
             source(media="(max-width: 767px)", srcset="img/doctor_mob.webp", type="image/webp")
