--- a/src/styles/components/delivery.scss
+++ b/src/styles/components/delivery.scss
@@ -1,26 +1,117 @@
 .delivery {
-  
+  &__title {
+    margin-bottom: 15px;
+    @include rm(768) {
+      margin-bottom: 30px;
+    }
+    @include rm(1024) {
+      margin-bottom: 40px;
+    }
+    @include rm(1220) {
+      margin-bottom: 50px;
+    }
+  }
 
   &__list {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    @include rm(1024) {
+      flex-direction: row;
+      justify-content: space-between;
+    }
   }
   &__item {
     max-width: 370px;
+    @include rm(480) {
+      max-width: 460px;
+      display: flex;
+      align-items: center;
+    }
+    @include rm(640) {
+      max-width: 500px;
+    }
+    @include rm(1024) {
+      position: relative;
+      max-width: 370px;
+      width: 32%;
+      flex-direction: column;
+    }
     &:not(:last-child) {
       margin-bottom: 20px;
+      @include rm(1024) {
+        margin: 0;
+      }
     }
   }
   &__img {
-    max-width: 240px;
+    max-width: 200px;
     margin: 0 auto 10px;
+    @include rm(480) {
+      margin: 0 10px 0 0;
+    }
+    @include rm(768) {
+      max-width: 240px;
+      margin: 0 20px 0 0;
+    }
+    @include rm(1024) {
+      margin: 0 auto 15px;
+    }
+    @include rm(1024) {
+      max-width: none;
+      margin-bottom: 70px;
+    }
+  }
+  &__wrapper-text {
+    @include rm(480) {
+      text-align: left;
+    }
+    @include rm(1024) {
+      text-align: center;
+    }
   }
   &__header {
     font-size: 22px;
+    @include rm(1024) {
+      margin-bottom: 15px;
+      font-size: 21px;
+    }
+    @include rm(1220) {
+      font-size: 22px;
+    }
   }
   &__text {
     font-size: 17px;
+  }
+  &__arrow {
+    @include rm(1024) {
+      position: absolute;
+      right: -60px;
+      top: 90px;
+      width: 0;
+      height: 0;
+      border: 30px solid transparent;
+      border-left-color: #e5e9ef;
+      &::before,
+      &::after {
+        position: absolute;
+        content: '';
+        width: 0;
+        height: 0;
+      }
+      &::before {
+        left: -25px;
+        top: -18px;
+        border: 18px solid transparent;
+        border-left-color: #fff;
+      }
+      &::after {
+        left: -21px;
+        top: -8px;
+        border: 8px solid transparent;
+        border-left-color: #c7cde1;
+      }
+    }
   }
 }
