--- a/src/templates/components/delivery.pug
+++ b/src/templates/components/delivery.pug
@@ -9,18 +9,21 @@ section.delivery.block
         picture
           source(srcset="img/delivery__01.webp", type="image/webp")
           img.delivery__img(src="img/delivery__01.jpg", alt="Image", loading="lazy")
-        h3.delivery__header.header__text Заполните форму заказа
-        p.delivery__text Вам нужно указать только свое имя и номер телефона
+        .delivery__wrapper-text
+          h3.delivery__header.header__text Заполните форму заказа
+          p.delivery__text Вам нужно указать только свое имя и номер телефона
       li.delivery__item
         span.delivery__arrow
         picture
           source(srcset="img/delivery__02.webp", type="image/webp")
           img.delivery__img(src="img/delivery__02.jpg", alt="Image", loading="lazy")
-        h3.delivery__header.header__text Ответьте на звонок оператора
-        p.delivery__text Он уточнит ваши данные и ответит на все вопросы о продукте
+        .delivery__wrapper-text
+          h3.delivery__header.header__text Ответьте на звонок оператора
+          p.delivery__text Он уточнит ваши данные и ответит на все вопросы о продукте
       li.delivery__item
         picture
           source(srcset="img/delivery__03.webp", type="image/webp")
           img.delivery__img(src="img/delivery__03.jpg", alt="Image", loading="lazy")
-        h3.delivery__header.header__text Оплатите после получения
-        p.delivery__text Все расходы по пересылке мы оплатим самостоятельно
+        .delivery__wrapper-text
+          h3.delivery__header.header__text Оплатите после получения
+          p.delivery__text Все расходы по пересылке мы оплатим самостоятельно
