--- a/src/styles/components/delivery.scss
+++ b/src/styles/components/delivery.scss
@@ -1,4 +1,17 @@
 .delivery {
+  position: relative;
+  @include rm(1220) {
+    &::after {
+      position: absolute;
+      z-index: 2;
+      content: '';
+      width: 100%;
+      height: 40px;
+      left: 0;
+      bottom: -20px;
+      background: url(../img/bg__line.png) no-repeat center center / 100% 100%;
+    }
+  }
   &__title {
     margin-bottom: 15px;
     @include rm(768) {
