--- a/src/templates/components/order.pug
+++ b/src/templates/components/order.pug
@@ -1,7 +1,7 @@
 .order
   span.order__discount -50
     span.order__discount_percent %
-  h3.order__date.bold.text__black Успей заказать по промо-цене
+  h3.order__date.bold.text__black Успейте заказать по промо-цене
     span.text__orange  до 
       span.date-0  31.31.2020
   include price
