--- a/src/templates/components/promo.pug
+++ b/src/templates/components/promo.pug
@@ -12,24 +12,24 @@ section.promo.block
         h3.promo__subtitle.bold при грыжах брюшной стенки, паховой области и половых органов
         ul.promo__support.support
           li.support__item
-            span.text__black.bold 
+            span.text__black.black 
               span.bg__line.bg__line__yellow Не допускает
               |  операцию
             |  сводя к нулю риск ущемления грыжи
           li.support__item
-            span.text__black.bold
+            span.text__black.black
               span.bg__line.bg__line__yellow Освобождает 
               |  от дискомфорта
             |  снижая боль, останавливая рост и уменьшая размер грыжи
           li.support__item
-            span.text__black.bold
+            span.text__black.black
               span.bg__line.bg__line__yellow Помогает
               |  забыть о грыже
             |  защищая от развития заболеваний в ущемленных органах
       .promo__product
         picture
-          source(media="(max-width: 767px)", srcset="img/prod_mob.webp", type="image/webp")
-          source(media="(max-width: 767px)", srcset="img/prod_mob.png")
-          source(srcset="img/prod.webp", type="image/webp")
-          img.product__img(src="img/prod.png", alt="")
+          source(media="(max-width: 767px)", srcset="img/prod4_mob.webp", type="image/webp")
+          source(media="(max-width: 767px)", srcset="img/prod4_mob.png")
+          source(srcset="img/prod4.webp", type="image/webp")
+          img.product__img(src="img/prod4.png", alt="")
       include order
