--- a/src/templates/components/use.pug
+++ b/src/templates/components/use.pug
@@ -13,10 +13,10 @@ section.use.block
               h3.age__header.header__text Детям с 6 до 12 лет
               p.age__course рекомендуемый курс — от 20 дней
           picture
-            source(media="(max-width: 767px)", srcset="img/prod_mob.webp", type="image/webp")
-            source(media="(max-width: 767px)", srcset="img/prod_mob.png")
-            source(srcset="img/prod.webp", type="image/webp")
-            img.use__prod(src="img/prod.png", alt="")
+            source(media="(max-width: 767px)", srcset="img/prod4_mob.webp", type="image/webp")
+            source(media="(max-width: 767px)", srcset="img/prod4_mob.png")
+            source(srcset="img/prod4.webp", type="image/webp")
+            img.use__prod(src="img/prod4.png", alt="")
       .use__wrapper_right
         ul.use__how.howuse
           li.howuse__item
