--- a/src/styles/components/order.scss
+++ b/src/styles/components/order.scss
@@ -38,7 +38,8 @@
       right: -40px;
       top: -20px;
       padding: 15px 0;
-      font-size: 36px;
+      font-size: 33px;
+      line-height: 48px;
     }
 
     &_percent {
