--- a/src/templates/components/bomb.pug
+++ b/src/templates/components/bomb.pug
@@ -16,16 +16,16 @@ section.bomb.block
             source(srcset="img/danger__02.webp", type="image/webp")
             img.danger__img(src="img/danger__02.png", alt="image", loading="lazy")
       li.danger__item
-        p.danger__text Ущемление органов приводит к некрозу и нагноению
+        p.danger__text Ущемление органов приводит к некрозу и&nbsp;нагноению
         .danger__img_wrapper
           picture
             source(srcset="img/danger__03.webp", type="image/webp")
             img.danger__img(src="img/danger__03.jpg", alt="image", loading="lazy")
       li.danger__item
-        p.danger__text Тогда пациент попадает в хирургию и ложится на операцию
+        p.danger__text Тогда пациент попадает в хирургию и ложится на&nbsp;операцию
         .danger__img_wrapper
           picture
             source(srcset="img/danger__04.webp", type="image/webp")
             img.danger__img(src="img/danger__04.png", alt="image", loading="lazy")
-    p.bomb__bottom_text Но даже если вы избегаете поднятия тяжелых предметов и следите за здоровьем,
+    p.bomb__bottom_text Но даже если вы избегаете поднятия тяжелых&nbsp;предметов и следите за здоровьем,
       span.text__orange это не гарантирует того, что вы избежите операции!
