--- a/src/templates/components/complications.pug
+++ b/src/templates/components/complications.pug
@@ -7,7 +7,7 @@ section.complications.block.bg
           picture
             source(srcset="img/complications__01.webp", type="image/webp")
             img.complications__img(src="img/complications__01.jpg", alt="image", loading="lazy")
-        h3.complications__header Воспаление
+        h3.complications__header.bg__line.bg__line__white Воспаление
         p.complications__text Грыжа может 
           span.text__blue инфицироваться и воспалиться
           | . Это приводит к высокой температуре, рвоте, запорам, болям.
@@ -16,7 +16,7 @@ section.complications.block.bg
           picture
             source(srcset="img/complications__02.webp", type="image/webp")
             img.complications__img(src="img/complications__02.jpg", alt="image", loading="lazy")
-        h3.complications__header Невправимость
+        h3.complications__header.bg__line.bg__line__white Невправимость
         p.complications__text Со временем от грыжи уже не избавиться ручным вправлением. Она становится больше, выпирает из-под одежды.
           span.text__blue  Поможет только операция.
       li.complications__item
@@ -24,7 +24,7 @@ section.complications.block.bg
           picture
             source(srcset="img/complications__03.webp", type="image/webp")
             img.complications__img(src="img/complications__03.jpg", alt="image", loading="lazy")
-        h3.complications__header Скопление кала в кишечнике
+        h3.complications__header.bg__line.bg__line__white Скопление кала в кишечнике
         p.complications__text Возникает, если в грыжевом мешке находится толстая кишка. Приводит к
           span.text__blue  болезненным запорам.
       li.complications__item
@@ -32,7 +32,7 @@ section.complications.block.bg
           picture
             source(srcset="img/complications__04.webp", type="image/webp")
             img.complications__img(src="img/complications__04.jpg", alt="image", loading="lazy")
-        h3.complications__header Дисфункция органов
+        h3.complications__header.bg__line.bg__line__white Дисфункция органов
         p.complications__text Органы, которые попадают в грыжу, прекращают функционировать. Возникает острая
           span.text__blue  нестерпимая боль 
           | в области “отмирающих” органов, поднимается температура.
