--- a/src/templates/components/stop.pug
+++ b/src/templates/components/stop.pug
@@ -12,21 +12,21 @@ section.stop.block
           h3.stop__header
             sapn.bg__line.bg__line__grey Оперировать — 
             span.text__orange опасно и дорого
-          p.stop__text Приводит к осложнениям в 40% случаев и к рецидиву в 80% случаев. Есть противопоказания по состоянию здоровья и возрасту.
+          p.stop__text Приводит к осложнениям в 40% случаев<br> и к рецидиву в 80% случаев.<br> Есть противопоказания по состоянию здоровья и возрасту.
       li.stop__item
         img.stop__img(src="img/stop__02.jpg", alt="image", loading="lazy")
         .spot__text_wrapper
           h3.stop__header
             sapn.bg__line.bg__line__grey Вправить — 
             span.text__orange опасно
-          p.stop__text В 50% случаев приводит к воспалению и нарушению целостности органа, который выпадает и как результат - к необходимости оперативного вмешательства.
+          p.stop__text В 50% случаев приводит к воспалению<br> и нарушению целостности органа,<br> который выпадает и как результат -<br> к необходимости оперативного вмешательства.
       li.stop__item
         img.stop__img(src="img/stop__03.jpg", alt="image", loading="lazy")
         .spot__text_wrapper
           h3.stop__header
             sapn.bg__line.bg__line__grey Жить с грыжей — 
             span.text__orange опасно
-          p.stop__text Поскольку вы будете жить с постоянным риском ущемления грыжи, болью и дискомфортом.
+          p.stop__text Поскольку вы будете жить с постоянным риском ущемления грыжи, болью<br> и дискомфортом.
     p.stop__bottom.stop__bottom__big Теперь для вас доступен 
       span.text__orange Трауфрил 
       | — новый метод лечения,
