--- a/src/templates/components/delivery.pug
+++ b/src/templates/components/delivery.pug
@@ -10,20 +10,20 @@ section.delivery.block
           source(srcset="img/delivery__01.webp", type="image/webp")
           img.delivery__img(src="img/delivery__01.jpg", alt="Image", loading="lazy")
         .delivery__wrapper-text
-          h3.delivery__header.header__text Заполните форму заказа
-          p.delivery__text Вам нужно указать только свое имя и номер телефона
+          h3.delivery__header.header__text.bg__line.bg__line__grey Заполните форму заказа
+          p.delivery__text Вам нужно указать только свое имя<br> и номер телефона
       li.delivery__item
         span.delivery__arrow
         picture
           source(srcset="img/delivery__02.webp", type="image/webp")
           img.delivery__img(src="img/delivery__02.jpg", alt="Image", loading="lazy")
         .delivery__wrapper-text
-          h3.delivery__header.header__text Ответьте на звонок оператора
+          h3.delivery__header.header__text.header__text.bg__line.bg__line__grey Ответьте на звонок оператора
           p.delivery__text Он уточнит ваши данные и ответит на все вопросы о продукте
       li.delivery__item
         picture
           source(srcset="img/delivery__03.webp", type="image/webp")
           img.delivery__img(src="img/delivery__03.jpg", alt="Image", loading="lazy")
         .delivery__wrapper-text
-          h3.delivery__header.header__text Оплатите после получения
-          p.delivery__text Все расходы по пересылке мы оплатим самостоятельно
+          h3.delivery__header.header__text.header__text.bg__line.bg__line__grey Оплатите после получения
+          p.delivery__text Все расходы по пересылке<br> мы оплатим самостоятельно
