--- a/src/templates/components/doctor.pug
+++ b/src/templates/components/doctor.pug
@@ -8,10 +8,10 @@ section.doctor.block.bg
           span.bold.text__orange Алексей Колесников
         p.doctor__text Несмотря на то, что я всю жизнь проработал хирургом и всегда относился, так сказать, к лагерю традиционной медицины, я часто выписываю людям средства из народной медицины. Объясняю почему: хирургические методы борьбы с грыжей предназначены для людей, у которых уже запущенные случаи. 
         p.doctor__text В случае с грыжей, я могу помочь человеку, когда нужно уже делать операцию, когда произошло защемление грыжи. Однако, когда у человека всё хорошо, и 
-          span.bold.text__black грыжа только немного выпирает - я считаю, что здесь не нужно делать операцию.
-          | Такому человеку будут намного полезнее народные методы, препараты на травах, например. Ведь здесь можно обойтись без радикальных методов, эту проблему можно решить щадящим образом без риска для здоровья.
+          span.bold.text__black грыжа только немного выпирает - я&nbsp;считаю, что здесь не нужно делать операцию. 
+          | Такому человеку будут намного полезнее народные методы, препараты на травах, например. Ведь здесь можно обойтись без радикальных методов, эту&nbsp;проблему можно решить щадящим образом без риска для здоровья.
         p.doctor__text Из всех растительных формул мне больше всего нравится состав Трауфрила - он самый эффективный, и это подтвердили результаты клиники, в которой я работаю. 
-          span.bold.text__black Этот препарат помогает свести грыжу на нет без вреда для пациента.
+          span.bold.text__black Этот препарат помогает свести грыжу на&nbsp;нет без вреда для пациента. 
           | Я рекомендую его всем, кто приходит ко мне с грыжей и хочет избежать операции. И взрослым, и детям.
         img.doctor__sign(src="img/sign.png", alt="Sign" loading="lazy")
       .doctor__wrapper_doc
