--- a/src/templates/components/promo.pug
+++ b/src/templates/components/promo.pug
@@ -31,5 +31,5 @@ section.promo.block
           source(media="(max-width: 767px)", srcset="img/prod3_mob.webp", type="image/webp")
           source(media="(max-width: 767px)", srcset="img/prod3_mob.png")
           source(srcset="img/prod3.webp", type="image/webp")
-          img.product__img(src="img/prod3.png", alt="")
+          img.product__img(src="img/prod3.png", alt="Traufril")
       include order
