--- a/src/styles/components/doctor.scss
+++ b/src/styles/components/doctor.scss
@@ -37,7 +37,10 @@
       position: absolute;
       max-width: 351px;
       top: 0;
-      left: calc(50% - 180px);
+      left: calc(50% - 190px);
+    }
+    @include rm(1280) {
+      left: calc(50% - 200px);
     }
   }
   &__title {
