--- a/src/templates/components/composition.pug
+++ b/src/templates/components/composition.pug
@@ -9,7 +9,7 @@ section.composition.block.bg
           source(media="(max-width: 767px)", srcset="img/prod3_mob.webp", type="image/webp")
           source(media="(max-width: 767px)", srcset="img/prod3_mob.png")
           source(srcset="img/prod3.webp", type="image/webp")
-          img.composition__prod(src="img/prod3.png", alt="")
+          img.composition__prod(src="img/prod3.png", alt="Traufril")
       //- .composition__wrapper__right
       ul.composition__list
         li.composition__item
