--- a/src/templates/components/use.pug
+++ b/src/templates/components/use.pug
@@ -16,7 +16,7 @@ section.use.block
             source(media="(max-width: 767px)", srcset="img/prod3_mob.webp", type="image/webp")
             source(media="(max-width: 767px)", srcset="img/prod3_mob.png")
             source(srcset="img/prod3.webp", type="image/webp")
-            img.use__prod(src="img/prod3.png", alt="")
+            img.use__prod(src="img/prod3.png", alt="Traufril")
       .use__wrapper_right
         ul.use__how.howuse
           li.howuse__item
