--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -23,6 +23,7 @@ append content
   include components/delivery
   include components/promo
   include components/footer
+  include components/popup
 
 append scripts
   script(src="https://179523.selcdn.ru/public/prod-scripts/cis_footer.js")
