--- a/src/styles/components/promo.scss
+++ b/src/styles/components/promo.scss
@@ -42,6 +42,7 @@
   }
 
   &__logo {
+    min-width: 270px;
     margin: 0 auto;
     @include rm(1024) {
       margin-right: 30px;
@@ -193,11 +194,11 @@
     background-color: #fff;
     background: url(../img/man.png) no-repeat left calc(50% + 75px) bottom 12px / 490px auto,
                 url(../img/bg__promo.jpg) no-repeat center bottom / 1220px 100%;
-    @include rm(1220) {
-      background-color: #fff;
-      background-image: url(../img/man.png) no-repeat left calc(50% + 150px) bottom / auto auto,
-                  url(../img/bg__promo.jpg) no-repeat center bottom / auto 100%;
-    }
+  }
+  @include rm(1220) {
+    background-color: #fff;
+    background: url(../img/man.png) no-repeat left calc(50% + 150px) bottom / auto auto,
+                url(../img/bg__promo.jpg) no-repeat center bottom / auto 100%;
   }
 }
 
@@ -206,11 +207,11 @@
     background-color: #fff;
     background: url(../img/man.webp) no-repeat left calc(50% + 75px) bottom 12px / 490px auto,
                 url(../img/bg__promo.jpg) no-repeat center bottom / 1220px 100%;
-    @include rm(1220) {
-      background-color: #fff;
-      background: url(../img/man.webp) no-repeat left calc(50% + 150px) bottom / auto auto,
-                        url(../img/bg__promo.jpg) no-repeat center bottom / auto 100%;
-    }
+  }
+  @include rm(1220) {
+    background-color: #fff;
+    background: url(../img/man.webp) no-repeat left calc(50% + 150px) bottom / auto auto,
+                      url(../img/bg__promo.jpg) no-repeat center bottom / auto 100%;
   }
 }
 
